using System;

public class Global
{
    public static string SCENE_MENU = "Menu";
    public static string SCENE_GAME = "Game";
    
    public static string TRIGGER_DROP = "Drop";

    public static string TRIGGER_START = "Start";

    public static string GAME_TRIGGER_MELEE  = "Melee";
    public static string GAME_TRIGGER_CAST  = "Cast";
    public static string GAME_TRIGGER_RECEIVED_DAMAGE = "ReceivedDamage";
    public static string GAME_CHOSE_PHASE = "ChosenPhase";
    internal static string GAME_SCORE = "Score";
    internal static string GAME_MASK_SCORE = "00000";
}
